--- a/courses/static/css/style.css
+++ b/courses/static/css/style.css
@@ -2999,3 +2999,36 @@ input:focus, textarea:focus {
   /*Without this, clicking will make it sticky*/
   pointer-events: none;
 }
+
+.msg-item {
+position: relative;
+}
+
+.img_cont_msg {
+  height: 40px;
+  width: 40px;
+}
+
+.user_img_msg {
+  height: 40px;
+  width: 40px;
+  border: 1.5px solid #f5f6fa;
+}
+
+.msg_cotainer {
+  margin-top: auto;
+  margin-bottom: auto;
+  margin-left: 10px;
+  border-radius: 25px;
+  background-color: #82ccdd;
+  padding: 10px;
+  position: relative;
+}
+
+.msg_time {
+  position: absolute;
+  bottom: -21px;
+  left: 60px;
+  color: #000;
+  font-size: 10px;
+}
