--- a/app_chat/templates/messages.html
+++ b/app_chat/templates/messages.html
@@ -178,7 +178,7 @@ Manage Conversations
                             </div>
 
                             <div class="card-body">
-                                <ul class="list-group" id="all-members-list">
+                                <ul class="list-group" id="all-members-list" style="max-height: 300px; overflow: auto;">
 
                                 </ul>
                             </div>
