--- a/app_chat/templates/messages.html
+++ b/app_chat/templates/messages.html
@@ -62,22 +62,7 @@ Manage Conversations
                     </div>
                 </div>
                 <div class="card-body" id="conversation-list">
-                    <div class="d-flex justify-content-start mb-5 msg-item">
-
-                    </div>
-                    <div class="d-flex justify-content-start mb-4 msg-item">
-                        <div class="img_cont_msg">
-                            <img src="https://static.turbosquid.com/Preview/001292/481/WV/_D.jpg"
-                                class="rounded-circle user_img_msg">
-                        </div>
-                        <div class="msg_cotainer">
-                            Hi how are oyu
-                        </div>
-                        <div class="msg_time">
-                            <span> 8:40 AM, Today</span> |
-                            <span>8:40 AM, Today</span>
-                        </div>
-                    </div>
+                   
                 </div>
                 <div class="card-footer">
                     <form>
@@ -325,9 +310,9 @@ Manage Conversations
                 });
             };
 
-            var addNewMember = function (student) {
+            var addNewMember = function (id) {
                 var data = {
-                    member: student.id,
+                    member: id,
                     conversation: '{{conversation.id}}'
                 };
 
@@ -549,11 +534,12 @@ Manage Conversations
 
                 $("div").on("click", '.link-add-member', function (e) {
                     e.stopPropagation();
+
                     var id = $(this).attr('id');
 
                     if (id) {
-                        var student = studentsList.find(a => id == id);
-                        addNewMember(student);
+                        //var student = studentsList.find(a => id == id);
+                        addNewMember(id);
                     }
                 });
 
