student msg link added

--- a/courses/templates/base.html
+++ b/courses/templates/base.html
@@ -64,6 +64,7 @@
                                 {% if request.user.is_authenticated and request.user.is_student == True %}
                                 <li><a href="{% url "student_course_list" %}"">My Courses</a></li>
                                 <li><a href=" {% url "taken_quiz_list" %}"">My Quiz</a></li>
+                                <li><a href="{% url "messages" %}"">Messages</a></li>
                                 {% endif %}
 
                                 {% if request.user.is_authenticated and request.user.is_teacher == True %}
@@ -149,7 +150,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.26.0/moment.min.js" integrity="sha256-5oApc/wMda1ntIEK4qoWJ4YItnV4fBHMwywunj8gPqc=" crossorigin="anonymous"></script>
-    
+
     {% block scripts %}
     {% endblock %}
     <script>
