tiwilo video example

--- a/app_chat/templates/video_room_detail.html
+++ b/app_chat/templates/video_room_detail.html
@@ -243,7 +243,7 @@
 
         var val = $("#hf-info").val();
 
-        if(val) {
+        if(val && val != 'None') {
             room_object = JSON.parse(val);
             window.room_object = room_object;
         }
