--- a/app_chat/templates/video_rooms.html
+++ b/app_chat/templates/video_rooms.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "teacher_base.html" %}
 
 {% block title %}
 {% if conversation is not None%}
@@ -9,6 +9,12 @@ Manage Conversations
 {% endblock %}
 
 {% block content %}
+
+<div class="mt-3 d-sm-flex align-items-center justify-content-between mb-4 p-2">
+    <h1 class="h3 mb-0 text-gray-800">Conferences Manager</h1>
+    <a href="#" class="d-sm-inline-block btn btn-sm btn-primary shadow-sm btn-new-chat"><i
+            class="fas fa-add"></i> Create New</a>
+</div>
 
 <div class="container-fluid">
 
