--- a/app_quiz/templates/question_add_form.html
+++ b/app_quiz/templates/question_add_form.html
@@ -1,69 +1,76 @@
-{% extends "base.html" %}
+{% extends "teacher_base.html" %}
 {% load i18n %}
 {% block title %}
 {% trans 'Add Quiz - Module' %}
 {% endblock %}
 
 {% block content %}
-<div class="container">
-    <div class="quiz">
-        <nav aria-label="breadcrumb">
-            <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a
-                        href="{% url 'course_module_update' module.id %}">{% trans module.title %}</a></li>
-                <li class="breadcrumb-item active" aria-current="page">{% trans 'Manage Quiz' %}</li>
-            </ol>
-        </nav>
 
+<div class="mt-3 d-sm-flex align-items-center justify-content-between mb-4 p-2">
+    <h1 class="h3 mb-0 text-gray-800">
+        {% trans 'Manage Quiz' %}
+        
+    </h1>
 
-    </div>
+    <a href="{% url 'module_content_list' module.id %}"
+        class="d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i class="fas fa-add"></i> << Back To {% trans module.title %}</a>
+</div>
+
+<div class="container-fluid">
+   
 
     <div class="row">
         <div class="col-md-5">
             <h5>
                 Add/Update Question
             </h5>
-            <form method="post" class="form-inline" novalidate>
-                {% csrf_token %}
-                {{ formset.management_form }}
-                {{ form.as_p }}
-                <div class="{% if formset.errors %} danger {% endif %}">
 
-                    {% for error in formset.non_form_errors %}
-                    <div class="text-danger">{{ error }}</div>
-                    {% endfor %}
-                    <div class="question">
-                        {% for form in formset %}
-                        <div>
-                            {% for hidden in form.hidden_fields %} {{ hidden }} {% endfor %}
-                        </div>
-
-                        <div class="row">
-                            <div class="col-md-12 small">
-                                <label for="exampleInputName2">Answer Title </label>
-                            </div>
-                            <div class="col-md-12">
-                                {{ form.text }}
-                            </div>
-
-                        </div>
-                        <div class="row">
-                            <div class="col-md-12">
-                                <div class="checkbox">
-                                    <label class="text-muted ">Correct answer? {{ form.is_correct }}</label>
-                                </div>
-                            </div>
-
-                        </div>
-
-                        {% endfor %}
+            <div class="row">
+                <form method="post" class="form-inline" novalidate>
+                    {% csrf_token %}
+                    {{ formset.management_form }}
+                    <div class="col-md-12">
+                        {{ form.as_p }}
                     </div>
-                </div>
-
-                <button class="btn btn-primary" type="submit">{% trans 'Save' %}</button>
-                <p class="text-warning">
-                    {% trans 'Your question must have at least 2 answers. Select at least one correct answer.' %}</p>
-            </form>
+                    <div class="col-md-12 {% if formset.errors %} danger {% endif %}">
+    
+                        {% for error in formset.non_form_errors %}
+                        <div class="text-danger">{{ error }}</div>
+                        {% endfor %}
+                        <div class="question">
+                            {% for form in formset %}
+                            <div>
+                                {% for hidden in form.hidden_fields %} {{ hidden }} {% endfor %}
+                            </div>
+    
+                            <div class="row">
+                                <div class="col-md-12 small">
+                                    <label for="lbl">Answer Title </label>
+                                </div>
+                                <div class="col-md-12">
+                                    {{ form.text }}
+                                </div>
+    
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="checkbox">
+                                        <span class="text-muted ">Correct answer? {{ form.is_correct }}</span>
+                                    </div>
+                                </div>
+    
+                            </div>
+    
+                            {% endfor %}
+                        </div>
+                    </div>
+    
+                    <button class="btn btn-primary" type="submit">{% trans 'Save' %}</button>
+                    <p class="text-info">
+                        {% trans 'Your question must have at least 2 answers. Select at least one correct answer.' %}</p>
+                </form>
+            </div>
+           
         </div>
 
         <div class="col-md-7">
@@ -129,6 +136,10 @@
 
 <script>
     $(document).ready(function () {
+
+        $("#content input, select, textarea").addClass('form-control');
+        $("form label").css('justify-content', 'left');
+
         $(".accordion").accordion({
             collapsible: true, active: false
         });
