--- a/app_teachers/templates/teacher_base.html
+++ b/app_teachers/templates/teacher_base.html
@@ -18,7 +18,7 @@
 <body class="bg-light">
 
     <nav class="navbar navbar-expand-md navbar-light fixed-top1 bg-white border">
-        <a class="navbar-brand mb-0 h1" href="/">EDUCA</a>
+        <a class="navbar-brand mb-0 h1" href="{%url 'teacher_dashboard'%}">EDUCA</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
