--- a/app_chat/templates/video_rooms.html
+++ b/app_chat/templates/video_rooms.html
@@ -1,19 +1,15 @@
 {% extends "teacher_base.html" %}
 
 {% block title %}
-{% if conversation is not None%}
-{{conversation}}
-{%else%}
-Manage Conversations
-{%endif%}
+Conferences Manager 
 {% endblock %}
 
 {% block content %}
 
 <div class="mt-3 d-sm-flex align-items-center justify-content-between mb-4 p-2">
     <h1 class="h3 mb-0 text-gray-800">Conferences Manager</h1>
-    <a href="#" class="d-sm-inline-block btn btn-sm btn-primary shadow-sm btn-new-chat"><i
-            class="fas fa-add"></i> Create New</a>
+    <a href="#" class="d-sm-inline-block btn btn-sm btn-primary shadow-sm link-new-room"><i class="fas fa-add"></i>
+        Create New</a>
 </div>
 
 <div class="container-fluid">
@@ -46,7 +42,7 @@ Manage Conversations
                                 <th>Name</th>
                                 <th>Course</th>
                                 <th>Status</th>
-                                <th>Participants Max</th>
+                                <th></th>
                                 <th>
                                     Actions
                                 </th>
@@ -94,7 +90,7 @@ Manage Conversations
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title">
-                    Manage Members
+                    Manage Participants
                 </h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
@@ -163,19 +159,20 @@ Manage Conversations
                     <option value="cancelled">Cancelled</option>
                 </select>
             </div>
-            <div class="col">
+            <div class="col d-none">
                 <label for="exampleFormControlSelect1">Max Participants</label>
                 <input type="number" class="form-control form-control-sm" value="2" id="participant_max"
                     name="participant_max">
 
             </div>
-        </div>
-        <div class="row">
             <div class="col">
                 <label for="exampleFormControlSelect1">Details</label>
                 <textarea class="form-control form-control-sm" id="details" name="details"></textarea>
 
             </div>
+        </div>
+        <div class="row">
+            
         </div>
     </form>
 </script>
@@ -197,10 +194,17 @@ Manage Conversations
            {{status}}
        </td>
        <td>
-           {{participant_max}}
+<a href="/communicate/video-rooms/{{id}}">Start</a> 
+
        </td>
        <td>
-<a href="/communicate/video-rooms/{{id}}">Details</a>
+        <a href="javascript:void(0)" class="btn btn-sm btn-info link-participants" id="{{id}}">
+            <i class="fa fa-users"></i>
+        </a>
+
+           <a href="javascript:void(0)" title="delete" id="{{id}}" class="btn btn-sm btn-warning link-delete-room">
+               <i class="fa fa-close"></i>
+           </a>
        </td>
    </tr>
 </script>
@@ -262,8 +266,8 @@ Manage Conversations
 
                     var source = document.getElementById("roomListItemTemplate").innerHTML;
                     var template = Handlebars.compile(source);
-                   
-                    $("#rooms-table tbody").append(template(item ));
+
+                    $("#rooms-table tbody").append(template(item));
                 });
             };
 
@@ -330,6 +334,94 @@ Manage Conversations
                 });
             };
 
+            var deleteRoom = function (id) {
+                $.ajax({
+                    type: "DELETE",
+                    url: "/api/video-rooms/" + id + "/",
+                    data: {},
+                    contentType: 'application/json',
+                    beforeSend: function (xhr, settings) {
+                        xhr.setRequestHeader("X-CSRFToken", '{{ csrf_token }}');
+                    },
+                    success: function (response) {
+                        toastr.warning('Room is removed.', 'Warning!');
+                        getRooms();
+                    },
+                    failure: function (errMsg) {
+                    }
+                });
+            };
+
+            var getAddedMembers = function (id) {
+
+                if (id) {
+                    $.get('/api/video-participants/?format=json', { room: id }, function (response) {
+                        savedMembersList = response;
+                        drawMembersList();
+                    });
+                }
+
+            };
+
+            var drawMembersList = function () {
+
+                $("#added-members-list").empty();
+
+                $(savedMembersList).each(function (index, item) {
+
+                    var li = $("<li />", { class: "list-group-item d-flex justify-content-between align-items-center" });
+
+                    var a = $("<a />", { href: '#', text: 'X', id: item.id, class: "link-remove-member badge badge-primary badge-pill text-white" });
+
+                    li.append(item.member.username).append(a);
+
+                    $("#added-members-list").append(li);
+                });
+            };
+
+            var addNewMember = function (id) {
+                var data = {
+                    member: id,
+                    room: $("#members-modal").attr('pk')
+                };
+
+                $.ajax({
+                    type: "POST",
+                    url: "/api/video-participants/",
+                    data: JSON.stringify(data),
+                    contentType: "application/json; charset=utf-8",
+                    dataType: "json",
+                    beforeSend: function (xhr, settings) {
+                        xhr.setRequestHeader("X-CSRFToken", '{{ csrf_token }}');
+                    },
+                    success: function (response) {
+                        toastr.success('Member is added.', 'Success!');
+                        getAddedMembers(data.room);
+                    },
+                    failure: function (errMsg) {
+                    }
+                });
+            };
+
+            var deleteMember = function (id) {
+                $.ajax({
+                    type: "DELETE",
+                    url: "/api/video-participants/" + id + "/",
+                    data: {},
+                    contentType: 'application/json',
+                    beforeSend: function (xhr, settings) {
+                        xhr.setRequestHeader("X-CSRFToken", '{{ csrf_token }}');
+                    },
+                    success: function (response) {
+                        toastr.warning('Member is removed.', 'Warning!');
+                        getAddedMembers($("#members-modal").attr('pk'));
+                    },
+                    failure: function (errMsg) {
+                    }
+                });
+            };
+
+
             var registerEvent = function () {
 
                 $("div").on("click", '.link-new-room', function (e) {
@@ -344,10 +436,22 @@ Manage Conversations
 
                 });
 
-                $("div").on("click", '#btn-members', function (e) {
+                $("div").on("click", '.link-delete-room', function (e) {
                     e.stopPropagation();
-                    $("#members-modal").modal('show');
 
+                    var id = $(this).attr('id');
+
+                    if (id) {
+                        deleteRoom(id);
+                    }
+                });
+
+                $("div").on("click", '.link-participants', function (e) {
+                    e.stopPropagation();
+
+                    var id = $(this).attr('id');
+                    $("#members-modal").attr('pk', id);
+                    $("#members-modal").modal('show');
                 });
 
                 $("div").on("click", '.link-add-member', function (e) {
@@ -356,7 +460,6 @@ Manage Conversations
                     var id = $(this).attr('id');
 
                     if (id) {
-                        //var student = studentsList.find(a => id == id);
                         addNewMember(id);
                     }
                 });
@@ -370,27 +473,6 @@ Manage Conversations
                     }
                 });
 
-                $("div").on("click", '#btn-delete-conversation', function (e) {
-                    e.stopPropagation();
-                    var id = $(this).attr('pk');
-
-                    if (id) {
-                        deleteConversation(id);
-                    }
-                });
-
-                $("div").on("click", '#btn-send-msg', function (e) {
-                    e.stopPropagation();
-
-                    var val = $("#text-msg").val();
-
-                    if (val) {
-                        sendMessage(val);
-                        $("#text-msg").val(null);
-                    }
-
-                });
-
                 $('#room-modal').on('shown.bs.modal', function (e) {
 
                     var source = document.getElementById("roomFormTemplate").innerHTML;
@@ -401,12 +483,20 @@ Manage Conversations
 
                 });
 
+                $("#members-modal").on('shown.bs.modal', function (e) {
+
+                    var id = $("#members-modal").attr('pk');
+
+                    getAddedMembers(id);
+                });
+
             };
 
             var init = function () {
                 registerEvent();
                 getRooms();
                 getCourses();
+                getStudents();
             };
 
             init();
