--- a/students/templates/student_base.html
+++ b/students/templates/student_base.html
@@ -18,8 +18,6 @@
     <!-- ##### Header Area Start ##### -->
     <header class="header-area">
 
-
-
         <!-- Navbar Area -->
         <div class="clever-main-menu">
             <div class="classy-nav-container breakpoint-off">
@@ -51,13 +49,10 @@
                                 <li><a href="{% url "student_course_list" %}"">My Courses</a></li>
                                 <li><a href=" {% url "taken_quiz_list" %}"">My Quiz</a></li>
                                 <li><a href="{% url "messages" %}"">Messages</a></li>
+                                <li><a href="{% url "video_rooms" %}"">Conferences</a></li>
                                 {% endif %}
 
-                                {% if request.user.is_authenticated and request.user.is_teacher == True %}
-                                <li><a href="{% url "manage_course_list" %}"">My Courses</a></li>
-                                <li><a href="{% url "messages" %}"">Messages</a></li>
-                                <li><a href="{% url "video_rooms" %}"">Video Rooms</a></li>
-                                {% endif %}
+                          
 
                                 <!-- <li><a href=" #">Pages</a>
                                     <ul class="dropdown">
